amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty.graphql
Profile: GraphQL
Conforms: true
Number of results: 1

Level: Warning

- Constraint: http://a.ml/vocabularies/amf/parser#couldnt-guess-root
  Message: Couldn't guess spec for root file
  Severity: Warning
  Target: 
  Property: 
  Range: 
  Location: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/empty.graphql
